Eindopdracht | Biocard spacing fix

--- a/Eindopdracht/css/main.css
+++ b/Eindopdracht/css/main.css
@@ -246,6 +246,12 @@ main>section>#biocard>ul li:nth-child(2n+1)
         height:auto;
         display: block;
         float:left;
+    }
+
+    main>section>#biocard>small,
+    main>section>#biocard>h2,
+    main>section>#biocard>ul
+    {
         margin-left:10px;
     }
 }
